added som html to the discover page, just trying a few things

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,3 +26,7 @@ a {
     background-size: cover;
 }
 
+.pusher .top {
+    background: url(https://is5-ssl.mzstatic.com/image/thumb/Purple111/v4/11/4c/0e/114c0e6a-eb12-8158-a1c7-64632cfd6a3f/source/512x512bb.jpg);
+}
+
