--- a/assets/css/discover.css
+++ b/assets/css/discover.css
@@ -1,3 +1,9 @@
+/*****************************
+COLORS
+#D9532D#ff9665#F9B38D
+#161E18#454E45#A9ABAA
+#61afbd#8FDAE7#F5EFEA
+*****************************/
 .site {
   display: flex;
   min-height: 100vh;
@@ -9,22 +15,57 @@
   overflow-y: scroll;
   padding: 0 5rem;
 }
+/*****************************
+NAVIGATION
+*****************************/
+.ui.secondary.pointing.menu .item {
+  color: #161e18;
+}
+.ui.secondary.pointing.menu .active.item {
+  background-color: transparent;
+  -webkit-box-shadow: none;
+  box-shadow: none;
+  border-color: #61afbd;
+  font-weight: 700;
+  color: #61afbd;
+}
 
+/*****************************
+MAIN SECTION
+*****************************/
 .ui.card {
-  background-color: lightblue;
+  background-repeat: repeat;
+  background-size: cover;
   border: none;
   border-radius: 20px;
+  box-shadow: 1px 1px 2px #454e45;
   height: 150px;
   width: 100%;
 }
-
+.ui.card.listen {
+  background-image: linear-gradient(to right bottom, #ff966570, #d9532d70),
+    url("../pattern/gplaypattern_@2X.png");
+}
+.ui.card.watch {
+  background-image: linear-gradient(to right bottom, #ffdb6570, #ffce2e70),
+    url("../pattern/gplaypattern_@2X.png");
+}
+.ui.card.read {
+  background-image: linear-gradient(to right bottom, #8dff7e70, #59aa4f70),
+    url("../pattern/gplaypattern_@2X.png");
+}
 .discover-section {
   font-size: 1.5rem;
   margin: 2rem 0;
   padding: 1rem 1rem;
   text-transform: uppercase;
 }
-
+.card-heading {
+  text-transform: uppercase;
+}
+.card-body {
+  margin-top: 15px;
+}
 #buttons {
   /* Positioning */
   margin: 50px 0;
@@ -46,6 +87,9 @@ button {
   color: #000;
 }
 
+/*****************************
+GRAPH
+*****************************/
 #graph {
   border-top: 2px solid #22242615;
   height: 20vw;
