--- a/assets/css/homepage.css
+++ b/assets/css/homepage.css
@@ -1,15 +1,46 @@
+/*******************************
+COLORS
+#D9532D#ff9665#F9B38D
+#161E18#454E45#A9ABAA
+#61afbd#8FDAE7#F5EFEA
+*******************************/
+
+/*******************************
+NAVIGATION
+*******************************/
+
+/*******************************
+WELCOME
+*******************************/
+/* LOGO */
+
+/* WEATHER */
+
+/* QUOTE */
+
+/*******************************
+DISCOVER PREVIEW
+*******************************/
 .music {
   background: url(https://cdn.pixabay.com/photo/2019/04/13/20/51/music-background-4125573_960_720.jpg);
   background-repeat: no-repeat;
   background-size: cover;
 }
+.quote {
+  background: url(https://images.unsplash.com/photo-1564352969556-5825e542fa6b?ixlib=rb-1.2.1&w=1000&q=80);
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+/*******************************
+GRAPH
+*******************************/
 
 a {
   text-decoration: none;
   color: inherit;
   font-size: 24px;
 }
-
 .option:hover {
   color: black;
   text-decoration: none;
@@ -18,111 +49,86 @@ a {
   border-radius: 5px;
   padding: 4px;
 }
-
-.quote {
-  background: url(https://images.unsplash.com/photo-1564352969556-5825e542fa6b?ixlib=rb-1.2.1&w=1000&q=80);
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-
 .pusher .top {
   background: url(https://is5-ssl.mzstatic.com/image/thumb/Purple111/v4/11/4c/0e/114c0e6a-eb12-8158-a1c7-64632cfd6a3f/source/512x512bb.jpg);
 }
-
 .hidden.menu {
   display: none;
 }
-
 .masthead.segment {
   min-height: 700px;
   padding: 1em 0em;
 }
-
 .masthead .logo.item img {
   margin-right: 1em;
 }
-
 .masthead .ui.menu .ui.button {
   margin-left: 0.5em;
 }
-
 .masthead h1.ui.header {
   margin-top: 3em;
   margin-bottom: 0em;
   font-size: 4em;
   font-weight: normal;
 }
-
 .masthead h2 {
   font-size: 1.7em;
   font-weight: normal;
 }
-
 .ui.vertical.stripe {
   padding: 8em 0em;
 }
-
 .ui.vertical.stripe h3 {
   font-size: 2em;
 }
-
 .ui.vertical.stripe .button + h3,
 .ui.vertical.stripe p + h3 {
   margin-top: 3em;
 }
-
 .ui.vertical.stripe .floated.image {
   clear: both;
 }
-
 .ui.vertical.stripe p {
   font-size: 1.33em;
 }
-
 .ui.vertical.stripe .horizontal.divider {
   margin: 3em 0em;
 }
-
 .quote.stripe.segment {
   padding: 0em;
 }
-
 .quote.stripe.segment .grid .column {
   padding-top: 5em;
   padding-bottom: 5em;
 }
-
 .footer.segment {
   padding: 5em 0em;
 }
-
 .secondary.pointing.menu .toc.item {
   display: none;
 }
 
+/*******************************
+RESPONSIVNESS
+*******************************/
 @media only screen and (max-width: 700px) {
   .ui.fixed.menu {
     display: none !important;
   }
-
   .secondary.pointing.menu .item,
   .secondary.pointing.menu .menu {
     display: none;
   }
-
   .secondary.pointing.menu .toc.item {
     display: block;
   }
-
   .masthead.segment {
     min-height: 350px;
   }
-
   .masthead h1.ui.header {
     font-size: 2em;
     margin-top: 1.5em;
   }
-
   .masthead h2 {
     margin-top: 0.5em;
     font-size: 1.5em;
