--- a/assets/css/homepage.css
+++ b/assets/css/homepage.css
@@ -13,13 +13,14 @@ NAVIGATION
 WELCOME
 *******************************/
 /* LOGO */
-
+#logo {width: 250px; height:250px;}
 /* WEATHER */
 
 /* QUOTE */
-#quote {
+#quote { color: skyblue
 }
 
+#steps {border-image-width: auto;}
 /*******************************
 DISCOVER PREVIEW
 *******************************/
@@ -99,6 +100,7 @@ a {
 }
 .footer.segment {
   padding: 5rem 0em;
+  text-align:center;
 }
 
 /*******************************
