menu hover states styled

--- a/assets/css/add-entry_overview.css
+++ b/assets/css/add-entry_overview.css
@@ -5,7 +5,7 @@ COLORS
 #61afbd#8FDAE7#F5EFEA
 
 exhilirated happy moderate sad depressed
-#C1EAF1#A3E0EB#8FDAE7#76B3BE#5C8B93 13vw
+#C1EAF1#A3E0EB#8FDAE7#76B3BE#5C8B93
 *****************************/
 .site {
   display: flex;
