menu moved to right

--- a/assets/css/discover.css
+++ b/assets/css/discover.css
@@ -21,6 +21,9 @@ exhilirated happy moderate sad depressed
 /*****************************
 NAVIGATION
 *****************************/
+.ui.secondary.pointing.menu {
+  margin-bottom: 0;
+}
 .ui.secondary.pointing.menu .item {
   color: #161e18;
 }
@@ -32,7 +35,7 @@ NAVIGATION
   background-color: transparent;
   -webkit-box-shadow: none;
   box-shadow: none;
-  border-color: #61afbd;
+  border-bottom: 5px solid #61afbd;
   font-weight: 700;
   color: #61afbd;
 }
