--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -24,6 +24,9 @@ exhilirated happy moderate sad depressed
 /*******************************
 NAVIGATION
 *******************************/
+.ui.header.item {
+  font-family: "Fira Sans", sans-serif;
+}
 .ui.secondary.pointing.menu {
   margin-bottom: 0;
 }
@@ -66,14 +69,37 @@ WELCOME
 /* QUOTE */
 #quote {
   color: #8fdae7;
+  font-size: 2rem;
+  font-weight: 300;
+  letter-spacing: 6px;
+  line-height: 3rem;
+  text-transform: uppercase;
 }
-#steps {
-  border-image-width: auto;
+.short {
+  border: none;
+  border-bottom: 2px solid #8fdae7;
+  margin: 2.5rem auto;
+  width: 8%;
 }
-
+#author {
+  color: #f5efea;
+  font-size: 1.25rem;
+  font-weight: 300;
+  letter-spacing: 2px;
+  line-height: 2rem;
+}
+/* HOTLINES */
+.hotlines {
+  padding: 3rem;
+  margin: auto;
+  width: 90vw;
+}
 /*******************************
 HOMEPAGE
 *******************************/
+.ui.inverted.header {
+  font-family: "Fira Sans", sans-serif;
+}
 a {
   text-decoration: none;
   color: inherit;
@@ -134,9 +160,20 @@ a {
   padding-top: 5rem;
   padding-bottom: 5rem;
 }
-.footer.segment {
-  padding: 5rem 0em;
-  text-align: center;
+.hotlines-title {
+  color: #61afbd;
+  font-size: 1.75rem;
+  font-weight: 700;
+}
+#hotlines-table {
+  background-color: #e6f5f8;
+  border: none;
+  box-shadow: 1px 1px 1px #a9abaa;
+  color: #454e45;
+}
+.hotlines-header {
+  font-size: 1.25rem;
+  font-weight: 700;
 }
 
 @media only screen and (max-width: 700px) {
