--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -24,6 +24,11 @@ exhilirated happy moderate sad depressed
 /*******************************
 NAVIGATION
 *******************************/
+.app-logo {
+  height: 3rem;
+  margin: 0.25rem 1rem;
+  width: 3rem;
+}
 .ui.header.item {
   font-family: "Fira Sans", sans-serif;
 }
@@ -32,6 +37,9 @@ NAVIGATION
 }
 .ui.secondary.pointing.menu .item {
   color: #161e18;
+}
+.ui.secondary.pointing.menu .item.app-name {
+  padding-left: 0;
 }
 .ui.secondary.pointing.menu a.item:hover {
   color: #61afbd;
@@ -65,6 +73,9 @@ WELCOME
   height: 250px;
 }
 /* WEATHER */
+#weather {
+  text-align: right;
+}
 
 /* QUOTE */
 #quote {
@@ -97,9 +108,6 @@ WELCOME
 /*******************************
 HOMEPAGE
 *******************************/
-.ui.inverted.header {
-  font-family: "Fira Sans", sans-serif;
-}
 a {
   text-decoration: none;
   color: inherit;
@@ -126,13 +134,17 @@ a {
   margin-left: 0.5rem;
 }
 .masthead h1.ui.header {
-  margin-top: 2rem;
-  margin-bottom: 0;
+  margin-top: 5rem;
+  margin-bottom: 5rem;
+  font-family: "Fira Sans", sans-serif;
   font-size: 4rem;
 }
 .masthead h2 {
   font-size: 1.7rem;
   font-weight: normal;
+}
+.ui.container {
+  height: 45vw; /* #1A1B1D */
 }
 .ui.vertical.stripe {
   padding: 8rem;
