--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -67,6 +67,21 @@ NAVIGATION
 /*******************************
 WELCOME
 *******************************/
+/* JUMBOTRON */
+.ui.masthead.segment {
+  background-image: linear-gradient(#353e6399, #353e6399), url(../images/zen-dandelion.jpg);
+  background-size: cover;
+  background-position: center bottom;
+  border: none;
+  border-radius: 0;
+  box-shadow: none;
+  margin: 0;
+  text-align: center;
+}
+.ui.header.welcome {
+  color: #ffffff;
+  font-size: 5rem;
+}
 /* LOGO */
 #logo {
   width: 250px;
@@ -80,10 +95,10 @@ WELCOME
 /* QUOTE */
 #quote {
   color: #8fdae7;
-  font-size: 2rem;
+  font-size: 1.5rem;
   font-weight: 300;
   letter-spacing: 6px;
-  line-height: 3rem;
+  line-height: 2.25rem;
   text-transform: uppercase;
 }
 .short {
@@ -120,9 +135,6 @@ a {
   border-radius: 5px;
   padding: 4px;
 }
-.pusher .top {
-  background: url(https://is5-ssl.mzstatic.com/image/thumb/Purple111/v4/11/4c/0e/114c0e6a-eb12-8158-a1c7-64632cfd6a3f/source/512x512bb.jpg);
-}
 .masthead.segment {
   min-height: 700px;
   padding: 1rem 0;
@@ -144,7 +156,7 @@ a {
   font-weight: normal;
 }
 .jumbotron {
-  height: 40vw; /* #1A1B1D */
+  height: 40vw;
 }
 .header-container {
   margin: 2rem auto;
@@ -185,6 +197,9 @@ a {
 .quote.stripe.segment .grid .column {
   padding-top: 5rem;
   padding-bottom: 5rem;
+}
+.ui.container.hotlines {
+  margin-bottom: 1.5rem;
 }
 .hotlines-title {
   color: #61afbd;
@@ -350,6 +365,7 @@ MODAL
 .modal-btn:hover {
   background-color: #8fdae7;
 }
+
 /*****************************
 OVERVIEW
 *****************************/
@@ -387,6 +403,28 @@ hr {
   padding: 3rem;
   margin: auto;
   width: 90vw;
+}
+
+/*****************************
+FOOTER
+*****************************/
+.footer {
+  background-color: #ffffff;
+  height: 6.5rem;
+  width: 100%;
+}
+a.item {
+  color: #61AFBD;
+}
+.divider-line {
+  color: #61AFBD;
+  font-weight: 800;
+  margin: 0 1.5rem;
+}
+.copyright {
+  color: #61AFBD;
+  font-size: 0.8rem;
+  margin: 1rem auto 1.5rem;
 }
 
 /*****************************
