--- a/views/discover.ejs
+++ b/views/discover.ejs
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
+  <head>
+    <!-- STANDARD META -->
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, maximum-scale=1.0"
+    />
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <!-- SITE PROPERTIES -->
+    <title>Moodsphere - Discover</title>
 
     <!-- STYLESHEETS: SEMANTIC UI, ICONS -->
     <link
@@ -17,45 +23,22 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/themes/material/assets/fonts/icons.woff"
     />
     <link
-      type="text/css"
+      href="https://fonts.googleapis.com/css?family=Fira+Sans:800&display=swap"
       rel="stylesheet"
-      href="https://cdn.firebase.com/libs/firebaseui/3.5.2/firebaseui.css"
     />
     <link rel="stylesheet" href="https://unpkg.com/swiper/css/swiper.min.css" />
-    <link href="https://fonts.googleapis.com/css?family=Fira+Sans:800&display=swap" rel="stylesheet">
 
-  <!-- SITE PROPERTIES -->
-  <title>Moodsphere - Discover</title>
+    <!-- CUSTOM STYLESHEET -->
+    <link rel="stylesheet" type="text/css" href="/assets/css/discover.css" />
+  </head>
 
-  <!-- CUSTOM STYLESHEET -->
-  <link rel="stylesheet" type="text/css" href="assets/css/discover.css" />
-</head>
+  <body>
 
-<body class="site">
-  <!-- NAVIGATION -->
-  <div class="ui sticky secondary pointing menu">
-      <img class="app-logo" src="assets/images/moodsphere.svg" alt="Moodsphere Logo" />
-      <p class="ui header item app-name">Moodsphere</p>
-      <div class="right menu">
-        <a class="item" href="homepage.html">
-        Home
-        </a>
-        <a id="add-entry-btn" class="item">
-        Add Entry
-        </a>
-        <a class="item" href="overview.html">
-        Overview
-        </a>
-        <a class="active item" href="discover.html">
-        Discover
-        </a>
-        <a class="ui item" id="logout-btn">
-          Logout
-        </a>
-      </div>
-  </div>
+<%- include('partials/navbar') -%>
 
-  <main class="site-content">
+<%- include('partials/add-entry') -%>
+
+<main class="site-content">
     <!-- WATCH: VIDEOS -->
     <h3 class="discover-section"><i class="film icon"></i> Watch</h3>
     <!-- Slider main container -->
@@ -305,159 +288,6 @@
       <div class="swiper-button-prev"></div>
       <div class="swiper-button-next"></div>
     </div>
-  </main>
+</main>
 
-  <!-- FOOTER -->
-    <div class="ui footer">
-      <div class="ui center aligned container">
-        <span class="divider-line">Made with  ☕️ and  💕 by </span><br>
-        <a class="item" href="https://github.com/nadinejuraschek">Nadine Juraschek</a><span class="divider-line"> | </span>
-        <a class="item" href="https://github.com/Morganatic">Morgan McMilin</a><span class="divider-line"> | </span>
-        <a class="item" href="https://github.com/Caitlin3410">Caitlin Phillips</a><span class="divider-line"> | </span>
-        <a class="item" href="https://github.com/LoraleeSmith">Loralee Smith</a>
-      </div>
-      <div class="ui center aligned container copyright">® 2019</div>
-    </div>
-
-    <!-- ADD ENTRY -->
-    <main class="ui modal site-content summary">
-      <!-- DATE -->
-      <h3 id="display-date" class="heading"></h3>
-      <div id="mood-states" class="ui grid">
-        <div class="five column row">
-          <div class="column">
-            <button
-              id="depressed"
-              class="mood"
-              data-mood="depressed"
-              data-color="#5C8B93"
-              value="1"
-            ></button>
-            <p class="mood-text">depressed</p>
-          </div>
-          <div class="column">
-            <button
-              id="sad"
-              class="mood"
-              data-mood="sad"
-              data-color="#76B3BE"
-              value="2"
-            ></button>
-            <p class="mood-text">sad</p>
-          </div>
-          <div class="column">
-            <button
-              id="moderate"
-              class="mood"
-              data-mood="moderate"
-              data-color="#8FDAE7"
-              value="3"
-            ></button>
-            <p class="mood-text">moderate</p>
-          </div>
-          <div class="column">
-            <button
-              id="happy"
-              class="mood"
-              data-mood="happy"
-              data-color="#A3E0EB"
-              value="4"
-            ></button>
-            <p class="mood-text">happy</p>
-          </div>
-          <div class="column">
-            <button
-              id="exhilirated"
-              class="mood"
-              data-mood="exhilirated"
-              data-color="#C1EAF1"
-              value="5"
-            ></button>
-            <p class="mood-text">exhilirated</p>
-          </div>
-        </div>
-      </div>
-
-      <hr />
-      <!-- QUESTION ANSWERS -->
-      <div id="question-answers">
-        <p id="questionA" class="question"></p>
-        <button
-          id="answer-1A"
-          class="answer-opt-1"
-          data-text="I feel hopeless all the time."
-        ></button>
-        <button
-          id="answer-2A"
-          class="answer-opt-1"
-          data-text="I feel hopeless sometimes."
-        ></button>
-        <button
-          id="answer-3A"
-          class="answer-opt-1"
-          data-text="I feel hopeful."
-        ></button>
-        <p id="questionB" class="question"></p>
-        <button
-          id="answer-1B"
-          class="answer-opt-2"
-          data-text="I have trouble falling asleep."
-        ></button>
-        <button
-          id="answer-2B"
-          class="answer-opt-2"
-          data-text="I keep waking up at night."
-        ></button>
-        <button
-          id="answer-3B"
-          class="answer-opt-2"
-          data-text="My sleeping habits are normal."
-        ></button>
-        <p id="questionC" class="question"></p>
-        <button
-          id="answer-1C"
-          class="answer-opt-3"
-          data-text="I am productive."
-        ></button>
-        <button
-          id="answer-2C"
-          class="answer-opt-3"
-          data-text="I only complete necessary tasks."
-        ></button>
-        <button
-          id="answer-3C"
-          class="answer-opt-3"
-          data-text="I have trouble leaving the house."
-        ></button>
-      </div>
-
-      <hr />
-      <!-- COMMENTS -->
-      <div id="display-comments">
-        <div class="ui form">
-          <div class="field">
-            <h3 class="heading">Additional Comments:</h3>
-            <textarea id="userComment"></textarea>
-            <button type="submit" id="continue-btn" class="modal-btn">
-              Continue
-            </button>
-          </div>
-        </div>
-      </div>
-    </main>
-
-    <!-- FIREBASE -->
-    <script src="https://www.gstatic.com/firebasejs/7.2.3/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/7.2.3/firebase-auth.js"></script>
-    <script src="https://cdn.firebase.com/libs/firebaseui/3.5.2/firebaseui.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/7.2.2/firebase-database.js"></script>
-
-    <!-- JAVASCRIPT, JQUERY -->
-    <script src="https://code.jquery.com/jquery-3.1.1.min.js"
-      integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
-    <script src="https://unpkg.com/swiper/js/swiper.min.js"></script>
-    <script type="text/javascript" src="assets/javascript/app.js"></script>
-</body>
-</html>
+<%- include('partials/footer') -%>
