--- a/public/assets/css/log-in.css
+++ b/public/assets/css/log-in.css
@@ -1,84 +1,89 @@
 body {
-  height: 90vh;
-}
-.image {
-  border-radius: 50%;
-  width: 300px !important;
-}
-.ui.header {
-  color: #7586ac;
-  height: 400px;
-}
-.ui.button {
-  background-color: #F9B38D;
-}
-.ui.button:hover {
-  background-color: #9ceaef;
-}
-.ui.segment {
-  background-color: #353e63;
-  border-radius: 0.8rem;
-}
-.ui.input {
-  color: #F9B38D;
-}
-.image {
-  margin-top: -100px;
-}
-.column {
-  max-width: 450px;
-}
-#login-btn {
-  font-size: 1.5rem;
-}
-#signup-btn {
-  font-size: 1.25rem;
-  margin: 2rem 2.5rem 0;
-}
-.login-logo {
-  display: inline-block;
-  height: 5rem;
-  weight: 5rem;
-}
-.login-heading {
-  color: #61AFBD;
-  display: inline-block;
-  font-family: "Fira Sans", sans-serif;
-  font-size: 5rem;
-  line-height: 5rem;
-  margin-left: 2rem;
-}
-.content {
-  margin: 5rem auto;
-  width: 50%;
-}
-.login-logo-div {
-  text-align: center;
-  line-height: 5rem;
-  margin-bottom: 2rem;
-}
-.message {
-  background-color: transparent;
-  color: #ffffff;
-  font-size: 1.5rem;
-  padding: 1rem 1.5rem;
-  text-align: center;
-}
-.footer {
-  background-color: #ffffff;
-  height: 6.5rem;
-  width: 100%;
-}
-a.item {
-  color: #61AFBD;
-}
-.divider-line {
-  color: #61AFBD;
-  font-weight: 800;
-  margin: 0 1.5rem;
-}
-.copyright {
-  color: #61AFBD;
-  font-size: 0.8rem;
-  margin: 1rem auto 1.5rem;
-}
+    height: 90vh;
+  }
+  .image {
+    border-radius: 50%;
+    width: 300px !important;
+  }
+  .ui.header {
+    color: #7586ac;
+    height: 400px;
+  }
+  .ui.button {
+    background-color: #F9B38D;
+  }
+  .ui.button:hover {
+    background-color: #9ceaef;
+  }
+  .ui.segment {
+    background-color: #353e63;
+    border-radius: 0.8rem;
+  }
+  .ui.input {
+    color: #F9B38D;
+  }
+  .image {
+    margin-top: -100px;
+  }
+  .column {
+    max-width: 450px;
+  }
+  #login-btn {
+    font-size: 1.5rem;
+  }
+  #signup-btn {
+    font-size: 1.25rem;
+    margin: 2rem 2.5rem 0;
+  }
+  .login-logo {
+    display: inline-block;
+    height: 5rem;
+    weight: 5rem;
+  }
+  .login-heading {
+    color: #61AFBD;
+    display: inline-block;
+    font-family: "Fira Sans", sans-serif;
+    font-size: 5rem;
+    line-height: 5rem;
+    margin-left: 2rem;
+  }
+  .content {
+    margin: 5rem auto;
+    width: 50%;
+  }
+  .login-logo-div {
+    text-align: center;
+    line-height: 5rem;
+    margin-bottom: 2rem;
+  }
+  .message {
+    background-color: transparent;
+    color: #ffffff;
+    font-size: 1.5rem;
+    padding: 1rem 1.5rem;
+    text-align: center;
+  }
+  .footer {
+    background-color: #ffffff;
+    height: 6.5rem;
+    width: 100%;
+  }
+  a.item {
+    color: #61AFBD;
+  }
+  .divider-line {
+    color: #61AFBD;
+    font-weight: 800;
+    margin: 0 1.5rem;
+  }
+  .copyright {
+    color: #61AFBD;
+    font-size: 0.8rem;
+    margin: 1rem auto 1.5rem;
+  }
+  .login-link {
+    color: #F9B38D;
+    font-size: 2rem;
+    font-weight: 800;
+  }
